--- a/Pengguna/app/src/main/AndroidManifest.xml
+++ b/Pengguna/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ListProyekActivity"></activity>
+        <activity android:name=".OAWActivity"></activity>
+        <activity android:name=".LasUmumActivity" />
+        <activity android:name=".ListProyekActivity" />
         <activity android:name=".SMFCAWActivity" />
         <activity android:name=".SMGTAWActivity" />
         <activity android:name=".GTAWActivity" />
