--- a/Admin/app/build.gradle
+++ b/Admin/app/build.gradle
@@ -34,5 +34,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.firebase:firebase-analytics:17.2.1'
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+    implementation 'com.firebaseui:firebase-ui-storage:4.3.1'
 }
 apply plugin: 'com.google.gms.google-services'
