--- a/Welder/app/src/main/AndroidManifest.xml
+++ b/Welder/app/src/main/AndroidManifest.xml
@@ -12,15 +12,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TungguAdminActivity"></activity>
-        <activity android:name=".VerifActivity">
-
-        </activity>
-
+        <activity android:name=".LihatActivity"></activity>
+        <activity android:name=".TungguAdminActivity" />
+        <activity android:name=".VerifActivity"></activity>
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".IntroActivity" />
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
