--- a/Welder/app/build.gradle
+++ b/Welder/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.firebase:firebase-analytics:17.2.1'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 
 }
 
