--- a/Admin/app/src/main/AndroidManifest.xml
+++ b/Admin/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EditWelderActivity"></activity>
+        <activity android:name=".EditPenggunaActivity"></activity>
+        <activity android:name=".ListPenggunaActivity" />
+        <activity android:name=".EditWelderActivity" />
         <activity android:name=".EditProyekActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivity" />
