--- a/Welder/app/src/main/AndroidManifest.xml
+++ b/Welder/app/src/main/AndroidManifest.xml
@@ -12,9 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LihatActivity"></activity>
+        <activity android:name=".RiwayatActivity"></activity>
+        <activity android:name=".LihatActivity" />
         <activity android:name=".TungguAdminActivity" />
-        <activity android:name=".VerifActivity"></activity>
+        <activity android:name=".VerifActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".IntroActivity" />
