--- a/Welder/app/src/main/AndroidManifest.xml
+++ b/Welder/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RiwayatActivity"></activity>
+        <activity android:name=".DetilRiwayatActivity"></activity>
+        <activity android:name=".RiwayatActivity" />
         <activity android:name=".LihatActivity" />
         <activity android:name=".TungguAdminActivity" />
         <activity android:name=".VerifActivity" />
