--- a/Admin/app/build.gradle
+++ b/Admin/app/build.gradle
@@ -37,5 +37,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
     implementation 'com.firebaseui:firebase-ui-storage:4.3.1'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-places:17.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
