--- a/Pengguna/app/src/main/AndroidManifest.xml
+++ b/Pengguna/app/src/main/AndroidManifest.xml
@@ -35,12 +35,8 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        </activity>>
         <activity android:name=".VerifActivity" />
         <activity android:name=".LihatProyekActivity" />
         <activity android:name=".OAWActivity" />
@@ -65,7 +61,11 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
